25.9.2 (16-01-2020)
- Improvement: Registration active state takes into account the whole execution year

25.9.1 (13-01-2020)
- Fix: Possible ExecutionIntervals of Dismissals must be childs
- Refactor: Replace usage of ExecutionSemester.getSemester() to ExecutionSemester.getChildOrder()

25.9.0 (13-01-2020)
- Refactor: Domain entity AcademicSemesterCE renamed to AcademicIntervalCE

25.8.0 (09-01-2020)
- Improvement: Don't allow multiple ExecutionYears with same name
- Refactor: Replace AcademicSemesterCE references by AcademicPeriod
- Refactor: Removed unused Units sub-classes
- Fix: CurricularPeriod comparator should also compare its type

25.7.0 (24-12-2019)
- Refactor: Replaced ExecutionSemester references to ExecutionInterval

25.6.0 (13-12-2019)
- Bug Fix: OptionalCurricularCourse should never be associated to Enrolment
- Refactor: Added new methods for finding ExecutionInterval childs

25.5.0 (27-11-2019)
- Refactor: CompetenceCourse duration by AcademicPeriod, instead of RegimeType 

25.4.0 (22-11-2019)
- New Feature: School Time option for Party Contact Type
- Improvement: added new AcademicPeriods: Months, Weeks and Days
- Refactor: preparation for making AcademicCalendarEntry support variable periods, without need of subclasses
- Refactor: added implementations of ExecutionInterval former abstract methods: getChildOrder(), getNext(), getPrevious(), getQualifiedName() and isCurrent()
- Refactor: disabled deprecated ExecutionSemester methods

25.3.0 (21-11-2019)
- Bug Fix: Fixed access to CompetenceCourse details functionality 
- Refactor: Included new access control Permissions to existing AcademicAuthorizations

25.2.3 (20-11-2019)
- Improvement: Add conclusionTitle field in CourseGroup
- Refactor: Added methods for find ExecutionInterval childs

25.2.2 (04-11-2019)
- Bug Fix: Send Registration creation Bennu Signal

25.2.1 (24-10-2019)
- Bug Fix: Fixed students list in teacher portal, when exists attends without enrolment  

25.2.0 (22-10-2019)